# qvim-baseline

./: .gitignore  README.md  environment.yml  pyproject.toml
src/qvim_2dft_baseline/: LICENSE  cqt.py  gen_filterbank.py  icqt.py
src/qvim_mn_baseline/: dataset.py  download.py  ex_qbv.py  ex_qvim.py  metrics.py  qvim_base_class.py  submission_utils.py  utils.py
src/qvim_mn_baseline/mn/: attention_pooling.py  block_types.py  model.py  preprocess.py
